refactor: update protocols to use ProtocolContext and improve user handling